k8s/app-deployment-no-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-api
  template:
    metadata:
      labels:
        app: go-web-api
    spec:
      containers:
        - name: go-web-api
          image: lucasonofre/golunch:v1
          resources:
            requests:
              cpu: "0.2"
              memory: 70Mi
            limits:
              cpu: "0.3"
              memory: 70Mi
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads

          startupProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 3
            failureThreshold: 3
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
      volumes:
        - name: uploads
          emptyDir: {}
