k8s/app-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-api-service-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
spec:
  type: LoadBalancer
  selector:
    app: go-web-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
