k8s/healthcheck-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-api-healthcheck
  labels:
    app: go-web-api-healthcheck
spec:
  type: ClusterIP
  selector:
    app: go-web-api
  ports:
    - name: healthcheck
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: go-web-api-healthcheck
subsets:
  - addresses:
    - ip: 127.0.0.1  # This will be updated by the deployment
    ports:
    - name: healthcheck
      port: 8080
      protocol: TCP
